--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
+    "firebase": "^9.15.0",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-flash-message": "^0.4.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-svg": "^13.6.0"
